Systeme de choix d'équipe done