@@ -61,8 +61,15 @@ public class Dresseur extends Personnage {
         System.out.println("Choisi ta team de pokemon !");
         int i = 0;
         while ( i != pokemons.size()) {
-            System.out.println(i + " - " + "Name : " + pokemons.get(i).getName() + ", Type :  " + pokemons.get(i).getType().getName() + ", Attaques : [" + pokemons.get(i).getMoves().getFirst().getName() + "/" + pokemons.get(i).getMoves().get(1).getName() + "]" + ", Puissance : " + pokemons.get(i).getAttaque() + ", Defense : " + pokemons.get(i).getDefense());
-            i ++;
+            System.out.print(i+1 + " - " + "Name : " + pokemons.get(i).getName() + ", Type : " + pokemons.get(i).getType().getName() + ", Attaques : [");
+
+            if (pokemons.get(i).getMoves().size() > 0) {
+                System.out.print(pokemons.get(i).getMoves().get(0).getName());
+            }
+            if (pokemons.get(i).getMoves().size() > 1) {
+                System.out.print("/" + pokemons.get(i).getMoves().get(1).getName());
+            }
+            System.out.println("], Puissance : " + pokemons.get(i).getAttaque() + ", Defense : " + pokemons.get(i).getDefense());            i ++;
         }
     }
 
@@ -72,9 +79,19 @@ public class Dresseur extends Personnage {
         int y = 6;
         while (i != 6){
             System.out.println("Pokemon restant à choisir : " + y );
+            System.out.println("Choose your next pokemon : " );
             Scanner scanner = new Scanner(System.in);
+            int choice = scanner.nextInt()-1;
+            this.pokemons.add(pokemons.get(choice));
+            System.out.println("You choose " + pokemons.get(choice).getName() + " !" );
             i ++;
             y --;
+        }
+        System.out.println("Your team is : " );
+        i = 0;
+        while (i != pokemons.size()) {
+            System.out.println(pokemons.get(i).getName());
+            i++;
         }
     }
 
